fixed preloader blocking the screen even if it is invisible

--- a/styles.scss
+++ b/styles.scss
@@ -117,12 +117,13 @@ html{
     height: 100vh;
     background-color: black;
     overflow-y: hidden;
-    transition: opacity 3s ease-in-out;
+    transition: opacity 2s ease-in-out;
     opacity: 1;
     
     
     &.preloader_finished{
       opacity: 0;
+      pointer-events: none;
       }
   }
   
